# cpp-assignment

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  pch.hpp
client/: CMakeLists.txt  client.cpp  client.hpp  main_client.cpp  strategy.hpp
common/: CMakeLists.txt  baseclient.cpp  baseclient.hpp  basictype.hpp  concurrentqueue.hpp  definitions.hpp  keyboardinput.hpp  latencylog.cpp  latencylog.hpp  logger.cpp  logger.hpp  matchengine.cpp  matchengine.hpp  orderbook.hpp  protocol.hpp  util.cpp  util.hpp
consumer/: CMakeLists.txt  consumer.cpp  consumer.hpp  main_consumer.cpp
results/after/latency/: latency_100_1.txt  latency_100_2.txt  latency_100_3.txt  latency_10_1.txt  latency_10_2.txt  latency_10_3.txt  result_n1000.txt
results/before/latency/: latency_100_1.txt  latency_100_2.txt  latency_100_3.txt  latency_10_1.txt  latency_10_2.txt  latency_10_3.txt  result_n1000.txt
scripts/: latency_stats.py  run_consumers.sh
server/: CMakeLists.txt  server.cpp  server.hpp  server_main.cpp  session.hpp
